<?xml version="1.0" encoding="utf-8"?>
<resources>

    <color name="black">#000000</color>

    <string name="app_name">HvZ GATech</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_landing_page">LandingPageActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="menu_settings">Settings</string>
    <string name="landingpage_reportkill_string">Report a Kill</string>
    <string name="landingpage_showmycode_string">Show My Code</string>
    <string name="title_activity_report_kill">ReportKillActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="reportkill_playercode_string">Player Code:</string>
    <string name="reportkill_qrpicture_string">Capture QR Code</string>
    <string name="reportkill_reportkill_string">Report Kill</string>
    <string name="reportkill_reportkillprogress_string">Reporting kill&#8320;</string>
    <string name="reportkill_feed_string">Zombies to Feed:</string>
    <string name="title_activity_main_menu">MainMenuActivity</string>
    <string name="title_activity_show_my_code">My Code</string>
    <string name="showmycode_textview_mycode_label_string">My Kill Code2</string>
    <string name="o_no">O no</string>
    <string name="get_kills_by_gt_name">Get Kills by GT Name</string>
    <string name="title_activity_mission_detail">MissionDetail</string>
    <string name="title_activity_chatroom">Chatroom</string>
    <string name="title_activity_zombie_search">ZombieSearchActivity</string>
    <string name="title_activity_profile">Profile</string>
    <string name="title_activity_achievement">Achievement</string>
    <string name="title_activity_kill_board">KillBoard</string>
    <string name="title_activity_contact">Contact</string>
    <string name="title_activity_mission_list">MissionList</string>
    <string name="title_activity_kill_map">KillMap</string>
    <string name="landingpage_contactadmins_string">Contact Admins</string>
    <string name="title_activity_contact_admins">ContactAdminsActivity</string>
    <string name="contactadmins_contactadmins_string">Contact Admins</string>
    <string name="contactadmins_contactverbage_string">Please describe your issue below, and enter the email which is best to contact you at.</string>
    <string name="contactadmins_emailaddress_string">Email Address</string>
    <string name="contactadmins_submit_string">Submit</string>
    <string name="contactadmins_name_string">Name</string>
    <string name="contactadmins_body_string">Body</string>
    <string name="contactadmins_subject_string">Subject</string>
    <string name="title_activity_messaging">MessagingActivity</string>
    <string name="messaging_compose_string">Compose</string>
    <string name="title_activity_compose_message">ComposeMessageActivity</string>
    <string name="title_activity_message_view">MessageViewActivity</string>
    <string name="title_activity_message_compose">MessageComposeActivity</string>
    <string name="messageview_reply_string">Reply</string>
    <string name="messagecompose_send_string">Send</string>
    <string name="messagecompose_to_textview">Recipient(s):</string>
    <string name="messagecompose_body_string">Body (Limited to 255 characters)</string>
    <string name="messagecompose_todetail_string">Separate multiple usernames with commas</string>
    <string name="messageview_delete_string">Delete</string>
    <string name="search_hint">Search Stuff</string>
    <string name="title_activity_message_list">MessageListActivity</string>
    <string name="messagelist_compose_string">Compose</string>
    <string name="menu_contact">Contact Admins</string>
    <string name="menu_messages">Messages</string>
    <string name="menu_logout">Logout</string>
    <string name="title_activity_report_kill_map">ReportKillMapActivity</string>
    
    <string name="content_description_avatar">Player Avatar</string>
    <string name="content_description_campus_map">Campus Map</string>
    <string name="content_description_kill_crosshair">Kill Location</string>
	<string name="content_description_achievements">Achievements</string>
	<string name="content_description_messages">Messagess</string>
</resources>