<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ContactAdminsActivity" >

    <TextView
        android:id="@+id/contactadmins_contactadmins_textview"
        android:layout_width="284dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/contactadmins_contactadmins_string"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="2dip"
        android:layout_margin="5dip"
        android:background="#FFFFFF" />

    <TextView
        android:id="@+id/contactadmins_subject_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contactadmins_subject_string"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/contactadmins_subjet_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10" />

    <TextView
        android:id="@+id/contactadmins_body_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contactadmins_body_string"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/contactadmins_message_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.18"
        android:ems="10"
        android:inputType="textMultiLine" />

    <TextView
        android:id="@+id/contactadmins_name_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contactadmins_name_string"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/contactadmins_name_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/contactadmins_emailaddress_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contactadmins_emailaddress_string"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/contactadmins_email_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress" />

    <Button
        android:id="@+id/contactadmins_send_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|center_horizontal"
        android:text="Send" />

</LinearLayout>