<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ReportKillActivity" >

    <EditText
        android:id="@+id/reportkill_playercode_textfield"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/reportkill_playercode_textview"
        android:layout_marginLeft="15dp"
        android:layout_toRightOf="@+id/reportkill_playercode_textview"
        android:ems="10" />

    <TextView
        android:id="@+id/reportkill_playercode_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="63dp"
        android:text="@string/reportkill_playercode_string"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/reportkill_reportkill_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/reportkill_reportkill_string" />

    <TextView
        android:id="@+id/reportkill_feed_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/reportkill_playercode_textview"
        android:layout_below="@+id/reportkill_playercode_textfield"
        android:layout_marginTop="14dp"
        android:text="@string/reportkill_feed_string"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <ListView
        android:id="@+id/reportkill_feed_listview"
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:layout_alignLeft="@+id/reportkill_feed_textview"
        android:layout_below="@+id/reportkill_feed_textview" >
    </ListView>

    <Button
        android:id="@+id/reportkill_qrpicture_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/reportkill_playercode_textfield"
        android:text="@string/reportkill_qrpicture_string" />

    <Button
        android:id="@+id/reportkill_addtofeed_button"
        android:layout_width="50dp"
        android:layout_height="30dp"
        android:layout_above="@+id/reportkill_feed_listview"
        android:layout_toRightOf="@+id/reportkill_reportkill_button"
        android:text="Button" />

</RelativeLayout>