<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MessageComposeActivity" >

    <TextView
        android:id="@+id/messagecompose_to_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/messagecompose_to_textview"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <EditText
            android:id="@+id/messagecompose_to_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10" />

        <ImageButton
            android:id="@+id/imageButton1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/search_icon" />

    </LinearLayout>

    <TextView
        android:id="@+id/messagecompose_body_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/messagecompose_body_string"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/messagecompost_body_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.33"
        android:ems="10"
        android:inputType="textMultiLine"
        android:maxLength="255" />

    <Button
        android:id="@+id/messagecompose_send_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/messagecompose_send_string" />

</LinearLayout>